wip eberything works no logic
